# jetton-monitor

./: .gitignore  DEVELOPMENT.md  README.md  TASK_REPORT.md  build-macos.sh  build-windows.bat  package-lock.json  package.json
.github/workflows/: build.yml  release.yml  windows.yml
docs/: BUILD_ENV_REQUIREMENTS.md  DESIGN.md  ONE_CLICK_BUILD.md  README.md  pitch-deck.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfigPanel.css  ConfigPanel.tsx  DigitalGauge.css  DigitalGauge.tsx  HistoryChart.css  HistoryChart.tsx  MetricsGrid.css  MetricsGrid.tsx  StatusCard.css  StatusCard.tsx  TaskQueue.css  TaskQueue.tsx
src/types/: index.ts
